# relational-transformer

./: .gitignore  README.md  pyproject.toml
rt/: data.py  emb.py  embed.py  embed_chunking.py  main.py  model.py  reg_std.py  tasks.py  viz.py
rt/gnn/: gnn_node.py  model.py
rustler/: .gitignore  Cargo.toml
rustler/src/: common.rs  convert-file.rs  fly.rs  main.rs  pre.rs
scripts/: contd_pretrain.py  download_relbench.py  download_relbench_datasets.py  download_relbench_tasks.py  example_finetune.py  fine_tune.py  finetune.py  pretrain.py  visualize_rustler.py
