[project]
name = "rt"
requires-python = "==3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rt = { path = ".", editable = true }
sentence_transformers = "*"
torch = "==2.6.0"
wandb = "*"
einops = "*"
strictfire = "*"
maturin = { version = "*", extras = ["patchelf"] }
ml_dtypes = "*"
orjson = "*"
ipykernel = "*"
relbench = { version = "*", extras = ["full"] }
pyg-lib = "*"
scikit-learn = "<1.6.0"
polars = "*"
maturin_import_hook = "*"

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
find-links = [{ url = "https://data.pyg.org/whl/torch-2.6.0+cu124.html" }]

[tool.pixi.dependencies]
rust = "*"
pygraphviz = "*"
uv = "*"

[tool.pixi.tasks]
